welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:11: error: '<-' expected but integer literal found.
  for (i 1 to pas)
         ^Methods:16: error: illegal start of simple expression
}
^